apps/clusters/ai-cluster/n8n.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "n8n"
    gethomepage.dev/group: "AI"
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${n8nHostname}"
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
