apps/clusters/ai-cluster/ollama.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: open-webui
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${ollamaIngressHost}"
  rules:
    - backendRefs:
        - name: open-webui-ollama
          port: 11434
