apps/clusters/ai-cluster/open-webui.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${openwebuiIngressHost}"
  rules:
    - backendRefs:
        - name: open-webui
          port: 80
