apps/clusters/ai-cluster/podinfo.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${podinfoIngressHost}"
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
